fix overflow bug

--- a/layout/src/styles/blocks/trip-card.css
+++ b/layout/src/styles/blocks/trip-card.css
@@ -1,6 +1,7 @@
 .trip-card {
     display: flex;
     justify-content: center;
+    overflow-x: hidden;
 }
 
 .trip-card__wrapper {
