--- a/layout/src/styles/common/global.css
+++ b/layout/src/styles/common/global.css
@@ -7,6 +7,11 @@ body {
     overflow-x: hidden;
 }
 
+html {
+  overflow-x: hidden;
+}
+
+
 img {
     max-width: 100%;
     height: auto;
